Sort of fixed layout overlap on smaller screens

--- a/src/app/core/core.component.scss
+++ b/src/app/core/core.component.scss
@@ -280,7 +280,6 @@
   height: 575px;
 }
 .mapFiltersSmallHeight {
-  height: calc(95vh - 200px);
   overflow-y: scroll;
   min-height: 100px;
 }
