--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -7,6 +7,11 @@
 
 
 
+.floating-body{
+	max-height: 60vh;
+	overflow: auto;
+}
+
 
 
 
@@ -296,7 +301,6 @@
 	height: 575px;
   }
   .mapFiltersSmallHeight {
-	height: calc(95vh - 200px);
 	overflow-y: scroll;
 	min-height: 100px;
   }
